# ollama_mcp_base

./: .gitignore  README.md  main.py  pyproject.toml  test_client.py
client/: __init__.py  base_client.py
config/: __init__.py  settings.py
models/: __init__.py  ollama_manager.py
server/: __init__.py  base_server.py
