[project]
name = "ollama-mcp-base-template"
version = "0.1.0"
description = "Base template for building Ollama-powered MCP servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
serve = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
